--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
-    "express": "~4.13.1"
+    "express": "~4.13.1",
+    "express-session": "^1.17.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
