--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:migrate": "sequelize db:migrate"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
