--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi",
+    "start": "if test \"$NODE_ENV\" = \"production\" ; then node ./bin/www ; else nodemon ./bin/www; fi",
     "test": "NODE_ENV=test mocha test/**/*_spec.js",
     "db:create": "node ./config/createDB.js",
     "db:drop": "node ./config/dropDB.js",
