--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "if test \"$NODE_ENV\" = \"production\" ; then node ./bin/www ; else nodemon ./bin/www; fi",
-    "test": "NODE_ENV=test mocha test/**/*_spec.js",
+    "test": "NODE_ENV=test mocha",
     "db:create": "node ./config/createDB.js",
     "db:drop": "node ./config/dropDB.js",
     "db:migrate": "sequelize db:migrate"
